Fix some spacing and window sizing issues

--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -65,3 +65,7 @@
 .simple-keyboard {
     max-width: 850px;
 }
+
+.top-panel, .test-stats, .user-controls {
+    padding: 0.5em;
+}
